<resources>
    <string name="app_name" translatable="false">Secuencia2</string>
    <string name="back">Back</string>

    <string name="play">Play</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="highscores">Highscores</string>
    <string name="custom">My Custom Gamemodes</string>

    <string name="error_login">Email or password are incorrect</string>
    <string name="error_net">Error trying to connect to server</string>

    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>
    <string name="login_register">New Account</string>
    <string name="login_loging_dial_title">Loging</string>
    <string name="login_loging_dial_msg">Connecting to the server, please wait&#8230;</string>
    <string name="login_error_empty">Please, fill all the fields</string>

    <string name="register_title">Register</string>
    <string name="register_nickname">Nickname</string>
    <string name="register_email">Email</string>
    <string name="register_password1">Password</string>
    <string name="register_password2">Repeat Password</string>
    <string name="register_btn_register">Create Account</string>
    <string name="register_btn_back">Cancel</string>
    <string name="register_registered">Account registered</string>
    <string name="register_error_nick_empty">Your nickname cannot be empty</string>
    <string name="register_error_email_empty">Please, enter your email to register</string>
    <string name="register_error_pass_empty">Please, enter a password for your account</string>
    <string name="register_error_pass_equal">Both passwords does not match</string>
    <string name="register_error_email_exists">This email is already registered</string>
    <string name="register_error_nick_exists">This nickname is already registered</string>
    <string name="register_error_generic">Error trying to connect to server</string>

    <string name="account_title">Account</string>
    <string name="account_logout">Log out</string>
    <string name="account_highscores_title">Your HighScores</string>
    <string name="account_highscores_title_gamemode">Gamemode</string>
    <string name="account_highscores_title_difficulty">Difficulty</string>
    <string name="account_highscores_title_score">Score</string>
    <string name="account_highscores_title_date">Date</string>
    <string name="account_highscores_loading">Loading your highscores&#8230;</string>
    <string name="account_highscores_error_empty">Play to save your scores online!</string>

    <string name="account_update_title">Edit Account</string>
    <string name="account_update_upload_changes">Upload changes</string>
    <string name="account_update_back">Cancel</string>
    <string name="account_update_old_password">Current password</string>
    <string name="account_update_old_password_repeat">Repeat current password</string>
    <string name="account_update_new_password">New password</string>
    <string name="account_update_new_password_repeat">Repeat new password</string>
    <string name="account_update_new_password_no_changes">(no changes)</string>
    <string name="account_update_error_email_exists">This email is already registered</string>
    <string name="account_update_error_nick_exists">This nickname is already registered</string>
    <string name="account_update_error_no_pass">Please, enter your password to edit your profile</string>
    <string name="account_update_error_wrong_pass">Wrong password</string>
    <string name="account_update_error_no_changes">There is nothing to change</string>
    <string name="account_update_error_old_pass_not_match">Your current password does not match</string>
    <string name="account_update_error_new_pass_not_match">New passwords does not match</string>
    <string name="account_update_loging_dial_title">Uploading changes</string>
    <string name="account_update_loging_dial_msg">Connecting to the server, please wait&#8230;</string>

    <string name="highscores_title">Global Highscores</string>
    <string name="highscores_loading">Loading highscores&#8230;</string>
    <string name="highscores_filter_all">Any</string>
    <string name="highscores_filter">Filter</string>
    <string name="highscores_title_email">User</string>
    <string name="highscores_title_gamemode">Gamemode</string>
    <string name="highscores_title_difficulty">Difficulty</string>
    <string name="highscores_title_score">Score</string>
    <string name="highscores_title_date">Date</string>
    <string name="highscores_error_empty">No scores were found</string>
    <string name="highscores_unknown_gamemode">Unknown</string>
    <string name="highscores_unknown_difficulty">Unknown</string>

    <string name="error_access_game_tit">Error accessing game data</string>
    <string name="error_access_game_msg">Maybe you accessed to this Activity from somewere odd</string>

    <string name="choose_gamemode">Choose Gamemode</string>
    <string name="choose_csp">Character Modes</string>
    <string name="choose_isp">Image Modes</string>
    <string name="choose_wsp">Word Modes</string>
    <string name="choose_customsp">Community Modes</string>
    <string name="download_custom_gamemodes">Update Community Gamemodes</string>
    <string name="search_custom_gamemodes">Search Community Gamemodes</string>
    <string name="downloading_custom_gamemode">Downloading, please wait&#8230;</string>
    <string name="item_custom_by_email">By %s</string>

    <string name="end_game_title">Final Score</string>
    <string name="score_highscore">NEW HIGHSCORE!</string>
    <string name="end_game_message">Your Score in %1$s (%2$s) is %3$f</string>

    <string name="custom_menu_title">My Gamemodes</string>
    <string name="custom_menu_highscores">HighScores</string>
    <string name="custom_menu_list">My Custom Gamemodes</string>

    <string name="custom_list_title">My Custom Gamemodes</string>
    <string name="custom_list_add">Create Custom Gamemodes</string>
    <string name="custom_list_ask_delete_message">Delete %1$s?</string>
    <string name="custom_list_ask_delete_ok">Yes, I\'m sure</string>
    <string name="custom_list_ask_delete_cancel">Cancel</string>
    <string name="custom_list_delete_title">Deleting</string>
    <string name="custom_list_delete_message">Connecting to the server, please wait&#8230;</string>
    <string name="custom_list_delete_good">Your gamemode was delete successfully</string>
    <string name="custom_list_delete_bad">Error. Check your Internet connection</string>

    <string name="accepted_digits_custom_gamemode" translatable="false">qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM áéíóúÁÉÍÓÚ ¿?¡!-+/*=%()[]{}@#$€.,\"\'</string>
    <string name="custom_editor_name">My Custom Mode</string>
    <string name="custom_editor_add_string">Add new value</string>
    <string name="custom_editor_error_empty_name">Enter a name for your gamemode</string>
    <string name="custom_editor_error_not_enough_values">Enter at least 2 values</string>
    <string name="custom_editor_uploading_title">Uploading</string>
    <string name="custom_editor_uploading_message">Connecting to the server, please wait&#8230;</string>
    <string name="custom_editor_uploading_good">Your gamemode was uploaded successfully!</string>
    <string name="custom_editor_uploading_bad">Error. Maybe you already have a Gamemode with the same name</string>

    <!-- STYLE PACKS -->

    <string name="csp_alphabet_name">Alphabet</string>
    <string name="csp_alphabet1_name">Alphabet A-I</string>
    <string name="csp_alphabet2_name">Alphabet J-R</string>
    <string name="csp_alphabet3_name">Alphabet S-Z</string>
    <string name="csp_greek_name">Greek Letters</string>

    <string name="ssp_formulas_name">Formulas</string>

    <string name="isp_forms_name">Forms</string>
    <string name="isp_cats_name">Cats</string>
    <string name="isp_colors_name">Colors</string>

    <string name="wsp_deadly_sins_name">Deadly Sins</string>
    <string name="wsp_deadly_sins_lust">Lust</string>
    <string name="wsp_deadly_sins_gluttony">Gluttony</string>
    <string name="wsp_deadly_sins_greed">Greed</string>
    <string name="wsp_deadly_sins_sloth">Sloth</string>
    <string name="wsp_deadly_sins_wrath">Wrath</string>
    <string name="wsp_deadly_sins_envy">Envy</string>
    <string name="wsp_deadly_sins_pride">Pride</string>

    <string name="wsp_week_days_name">Week Days</string>
    <string name="wsp_week_days_monday">Monday</string>
    <string name="wsp_week_days_tuesday">Tuesday</string>
    <string name="wsp_week_days_wednesday">Wednesday</string>
    <string name="wsp_week_days_thursday">Thursday</string>
    <string name="wsp_week_days_friday">Friday</string>
    <string name="wsp_week_days_saturday">Saturday</string>
    <string name="wsp_week_days_sunday">Sunday</string>

    <string name="wsp_erasmus_name">Erasmus+ Cities</string>
    <string name="wsp_erasmus_greece">Serres</string>
    <string name="wsp_erasmus_italy">Modica</string>
    <string name="wsp_erasmus_turkey">Samsun</string>
    <string name="wsp_erasmus_poland">Slupsk</string>
    <string name="wsp_erasmus_spain">El Ejido</string>

    <!-- Difficulties -->
    <string name="diff_easiest">Shortest</string>
    <string name="diff_easy">Short</string>
    <string name="diff_medium">Competitive</string>
    <string name="diff_hard">Long</string>
    <string name="diff_extreme">Extreme</string>

    <string name="pick_diff">Pick a difficulty for</string>
</resources>
